# Objetos

./: CMakeLists.txt  main.cpp
Lib/: CMakeLists.txt  animal.hpp  gatito.hpp
Srs/: CMakeLists.txt  animal.cpp  gatito.cpp
